# fabric

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  build.rs  flake.nix  install.sh  now.md
.github/workflows/: nix.yml
docs/: hetzner-supervisor-plan.md  multi-machine-reliability-2026-07-22.md  path-quality-reconnect-roadmap.md  service-install-roadmap.md
docs/proofs/: exec-isolated-pty-survives-restart.sh
src/: config.rs  control.rs  daemon.rs  exec.rs  lib.rs  main.rs  mux.rs  service.rs  shell.rs  tunnel.rs
tests/: local_slice.rs  provisioning.rs  shell.rs
