[package]
name = "fabric"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
iroh = "1.0.2"
rand = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
