[package]
name = "fabric"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
iroh = "1.0.2"
libc = "0.2"
netwatch = "0.19.1"
n0-watcher = "1.0.0"
portable-pty = "0.9.0"
rand = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
